--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         color: #58318a;
         font-weight: 400;
     }
-
+ 
     main p {
         line-height: 22px;
         font-size: 16px;
@@ -70,7 +70,8 @@
         width: 500px;
     }
 
-    main div {
+    main div
+     {
         margin-left: 10%;
         margin-top: 7%;
     }
@@ -123,6 +124,14 @@
         </ul>
 
     </footer>
+
+    <a href="https://www.investopedia.com/terms/e/economics.asp#what-is-economics">Econome</a>
+<br>
+    <a href="https://en.wikipedia.org/wiki/Information_system">Information technology</a>
+<br>
+    <a href="https://en.wikipedia.org/wiki/Accounting">Accounting</a>
+
+    <script src="Java1.js"></script> 
 
 </body>
 
