--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
             <a href="mailto: afraawael96@gmail.com">afraawael96@gmail.com</a> 
         </ul>
 
+
     </footer>
 
     <a href="https://www.investopedia.com/terms/e/economics.asp#what-is-economics">Econome</a>
@@ -131,7 +132,7 @@
 <br>
     <a href="https://en.wikipedia.org/wiki/Accounting">Accounting</a>
 
-    <script src="Java1.js"></script> 
+    <script src="app.js"></script> 
 
 </body>
 
