--- a/index.html
+++ b/index.html
@@ -134,6 +134,13 @@
 
     <script src="app.js"></script> 
 
+    
+    <img src="economic.jpg">
+    <img src="accounting.jpg
+    "><img src="it.jpg">
+
+
+
 </body>
 
 </html>
